--- a/style.css
+++ b/style.css
@@ -1,82 +1,72 @@
-/*? global clearing */
-*,
-html,
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: sans-serif;
+  background-color: #e0f2fe;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
-body {
-  background-color: #222222;
-  color: white;
-  text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+header {
+  padding: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #142d31;
+  color: #fff;
 }
 
-nav {
-  overflow: hidden;
-  background-color: #333;
+.logo {
+  font-size: 30px;
+  font-weight: bold;
+  color: rgb(25, 218, 169);
 }
 
-nav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+.nav {
+  display: flex;
+
+  gap: 20px;
+}
+
+.nav a {
   text-decoration: none;
-  font-size: 17px;
+  color: #fff;
 }
 
-nav a:hover {
-  background-color: #ddd;
-  color: black;
+main {
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  gap: 20px;
 }
 
-nav a.active {
-  background-color: crimson;
-  color: white;
+.biodata,
+.pengalaman-kerja {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-nav .icon {
-  display: none;
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
-.btn {
-  margin-top: 16px;
-  border: none;
-  padding: 12px;
-  background-color: white;
-  font-size: 18px;
-  font-weight: 600;
-  color: black;
-  cursor: pointer;
+th,
+td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: left;
 }
 
-@media screen and (max-width: 600px) {
-  nav a:not(:first-child) {
-    display: none;
-  }
-  nav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  nav.responsive {
-    position: relative;
-  }
-  nav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  nav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+footer {
+  padding: 20px;
+  text-align: center;
+  background-color: #191e1f;
+  color: #fff;
 }
